Code after working on review comments

--- a/articlemanagement/web/views/Admin.html
+++ b/articlemanagement/web/views/Admin.html
@@ -21,12 +21,8 @@
                     <li><a href="Reports.html">REPORTS</a></li>
                 </ul>
             </div>
-            <div id="content-wrap">
-                <div id="info-wrap">
-                   <textarea rows="4" cols="50">
-                        
-                    </textarea>
-                </div>
+           <div id="WFA">
+                    <label for=WFA>USERS WFA : </label>
            </div>
             <div id="footer">
                  <button onclick="location.href='signin.html'" class=" submits" type="submit" onclick="signup()">Logout</button>
