--- a/articlemanagement/web/views/profile.html
+++ b/articlemanagement/web/views/profile.html
@@ -45,8 +45,8 @@
                 </tr>
                 </tbody>
                 </table>
-                <button class="submits" type="button" id="editbutton" onclick="edit()">Edit</button>
-                <button class=" submits" type="button" id="savebutton" onclick="save()">Save</button> 
+                <button class="submits" type="button" id="editbutton" onclick="editUserProfile()">Edit</button>
+                <button class=" submits" type="button" id="savebutton" onclick="updateUserProfile()">Save</button> 
                 <button class="submits" type="button" onclick="cancel()">Cancel</button></td>
          </div>
 </body>
