Ui validation for displaying list of articles

--- a/articlemanagement/web/views/Admin.html
+++ b/articlemanagement/web/views/Admin.html
@@ -16,14 +16,18 @@
                 <ul>
                     <li><a href="profile.html">PROFILE</a></li>
                     <li><a href="userlist.html">USERS</a></li>
-                    <li><a href="Article.html">ARTICLES</a></li>
-                    <li><a href="Categories.html">CATEGORIES</a></li>
+                    <li><a href="article.html">ARTICLES</a></li>
                     <li><a href="Reports.html">REPORTS</a></li>
                 </ul>
             </div>
-           <div id="WFA">
-                    <label for=WFA>USERS WFA : </label>
-           </div>
+          <div class="WFA">
+            <h2>LIST OF USERS WAITING FOR APPROVAL</h2>
+          </div>
+          <div class="WFA">
+            <h2>LIST OF ARTICLES WAITING FOR APPROVAL</h2>
+          </div>
+         </div>
+
             <div id="footer">
                  <button onclick="location.href='signin.html'" class=" submits" type="submit" onclick="signup()">Logout</button>
             </div>
