--- a/articlemanagement/web/styles/Admin.css
+++ b/articlemanagement/web/styles/Admin.css
@@ -68,3 +68,12 @@ td {
     padding: 5px;
     text-align:center;
 }
+
+.WFA {
+   float: left;
+   margin: 10px;
+   padding: 5px;
+   width: 300px;
+   height: 30px;
+   border: 1px solid black;
+}   
