--- a/articlemanagement/web/views/userlist.html
+++ b/articlemanagement/web/views/userlist.html
@@ -5,7 +5,7 @@
     <script src="/articlemanagement/scripts/userlist.js"></script>  
 </head>
 <body>
-    <div id="selectedstatus" class="wrapper">
+    <div id="selectedstatus" class="wrapper" onchange="getlistofusers()">
         <span>
         <select id="mySelect">
             <option value="ALL">ALL</option>
@@ -14,10 +14,7 @@
             <option value="WFA">WFA</option>
         </select>
         </span>
-        <span>
-        <button id="button" onclick="getlistofusers()">Display users!</button>
-        <button id="button" onclick="cancel()">CANCEL</button>
-        </span>
     </div>
+    <div id="userTable"></div>
 </body>
 </html>
