--- a/articlemanagement/web/views/userlist.html
+++ b/articlemanagement/web/views/userlist.html
@@ -4,7 +4,7 @@
     <title>List Of Users</title>
     <script src="/articlemanagement/scripts/userlist.js"></script>  
 </head>
-<body>
+<body onload="getlistofusers()">
     <div id="selectedstatus" class="wrapper" onchange="getlistofusers()">
         <span>
         <select id="mySelect">
