view details of particular user

--- a/articlemanagement/web/views/author.html
+++ b/articlemanagement/web/views/author.html
@@ -4,9 +4,9 @@
      <link rel="stylesheet" href="/articlemanagement/styles/author.css">
      <script src="/articlemanagement/scripts/article.js"></script>  
 </head>
-<body onload="getdetailsOfAuthor()">
+<body onload="getAuthorDetails()">
     
-    <div id="authordetails"></div>
+      <div id="authordetails"></div>
     
 </body>
     
