--- a/articlemanagement/web/styles/viewarticle.css
+++ b/articlemanagement/web/styles/viewarticle.css
@@ -7,13 +7,7 @@
     padding:5px;
 }
 
-#authordetails {
+#articledetails {
     width: 80%;
     padding:10px;
-}
-
-#authordetails div label {
-    background: #eee;
-    padding: 10px;
-    margin-bottom: 20px;
 }
