--- a/articlemanagement/web/views/article.html
+++ b/articlemanagement/web/views/article.html
@@ -10,7 +10,7 @@
     </div>
     <div id="main">
         <div id="nav">
-            <li><a href="Categories.html">CATEGORIES</a></li>
+            <li><a href="category.html">CATEGORIES</a></li>
         </div>
         
         <div id="section">
@@ -21,6 +21,9 @@
                 <option value="SOCIALMEDIA">SOCIALMEDIA</option>
                 <option value="WORKWORLD">WORKWORLD</option>
             </select>
+            
+            <button id="addcategory">ADD CATEGORY</button>
+         
         <div id="articleList"></div>
     </div>
    
