--- a/articlemanagement/web/views/user.html
+++ b/articlemanagement/web/views/user.html
@@ -15,7 +15,7 @@
             <div id="sidebar">
                 <ul>
                     <li><a href="profile.html">PROFILE</a></li>
-                    <li><a href="article.html">ARTICLES</a></li>
+                    <li><a href="userarticle.html">ARTICLES</a></li>
                     <li><a href="Reports.html">REPORTS</a></li>
                 </ul>
             </div>          
