--- a/articlemanagement/web/views/userarticle.html
+++ b/articlemanagement/web/views/userarticle.html
@@ -22,10 +22,9 @@
                 <option value="WORKWORLD">WORKWORLD</option>
             </select>
             
-            <button id="addcategory">ADD CATEGORY</button>
+            <a href="newarticle.html" id="uploadnewarticle">UPLOAD NEW ARTICLE</a>
          
         <div id="articleList"></div>
-           
     </div>
    
 </body>
