--- a/articlemanagement/web/views/viewarticle.html
+++ b/articlemanagement/web/views/viewarticle.html
@@ -8,5 +8,10 @@
     
     <div id="articledetails"></div>
     
+    <span>
+    <button id="addcomment" onclick="location.href='comments.html'">ADD COMMENT</button>
+    <button id="viewcomment" onclick="location.href='viewcomments.html'">VIEW COMMENTS</button>
+    </span>
+    
 </body>
     
