--- a/articlemanagement/web/views/newarticle.html
+++ b/articlemanagement/web/views/newarticle.html
@@ -6,6 +6,17 @@
 </head>
 
 <body>
-    <header>
-    <h1>Article Name: </strong></h1>
-    </header>
+    <div>
+        <h1>Article Name: </h1><textarea rows="5" cols="70" ></textarea>
+        <h1>Category: </h1><textarea rows="2" cols="70" ></textarea>
+        <h1>Description: </h1><textarea rows="10" cols="70" ></textarea>
+        <h1>Content: </h3><textarea rows="50" cols="70" ></textarea>
+    </div>
+    <div>
+        Upload File: <input type="file"  multiple="multiple" name="upfile">
+    </div>
+    <div>
+        <button>POST</button> <button>CANCEL</button>
+    </div>
+</body>
+</html>
