Dynamically add values to category drop down list

--- a/articlemanagement/web/views/article.html
+++ b/articlemanagement/web/views/article.html
@@ -2,7 +2,8 @@
 <html>
 <head>
      <link rel="stylesheet" href="/articlemanagement/styles/article.css">
-     <script src="/articlemanagement/scripts/article.js"></script>  
+     <script src="/articlemanagement/scripts/article.js"></script>
+     <script src="/articlemanagement/scripts/addcategory.js"></script>    
 </head>
 <body onload="getlistofarticles()">
     <div id="header">
@@ -22,7 +23,7 @@
                 <option value="WORKWORLD">WORKWORLD</option>
             </select>
             
-            <button id="addcategory">ADD CATEGORY</button>
+            <button id="addcategory" onclick="location.href='addcategory.html'">ADD CATEGORY</button>
          
         <div id="articleList"></div>
            
