Add values to dropdown list dynamically

--- a/articlemanagement/web/styles/article.css
+++ b/articlemanagement/web/styles/article.css
@@ -22,7 +22,12 @@
 
 #addcategory {
     float:right;
-    padding:5px;
+    padding:2px;
+}
+
+#uploadnewarticle {
+    float:right;
+    padding:2px;
 }
 
 #articleList ul {
