--- a/articlemanagement/web/views/article.html
+++ b/articlemanagement/web/views/article.html
@@ -3,9 +3,9 @@
 <head>
      <link rel="stylesheet" href="/articlemanagement/styles/article.css">
      <script src="/articlemanagement/scripts/article.js"></script>
-     <script src="/articlemanagement/scripts/addcategory.js"></script>    
+     <script src="/articlemanagement/scripts/category.js"></script>    
 </head>
-<body onload="getlistofarticles()">
+<body onload= "getlistofcategory('true');">
     <div id="header">
         <h1>ARTICLES</h1>
     </div>
@@ -15,19 +15,13 @@
         </div>
         
         <div id="section">
-            <select id="mySelect" onchange="getlistofarticles()">
-                <option value="ALL">ALL</option>
-                <option value="AngularJs">AngularJs</option>
-                <option value="BUSINESS">BUSINESS</option>
-                <option value="SOCIALMEDIA">SOCIALMEDIA</option>
-                <option value="WORKWORLD">WORKWORLD</option>
-            </select>
+            <div id="categories"> </div>
             
+            <div>
             <button id="addcategory" onclick="location.href='addcategory.html'">ADD CATEGORY</button>
-         
-        <div id="articleList"></div>
-           
+            </div>
+        
+            <div id="articleList"></div>
     </div>
-   
 </body>
 </html>
