--- a/articlemanagement/web/views/category.html
+++ b/articlemanagement/web/views/category.html
@@ -4,7 +4,7 @@
      <link rel="stylesheet" href="/articlemanagement/styles/category.css">
     <script src="/articlemanagement/scripts/category.js"></script>  
 </head>
-<body onload="getlistofcategory()">
+<body onload="getlistofcategory('false');">
   
     <div id="categorylist">
         <h2>LIST OF CATEGORY</h2>
