--- a/articlemanagement/web/views/newarticle.html
+++ b/articlemanagement/web/views/newarticle.html
@@ -7,13 +7,15 @@
 
 <body>
     <div>
-        <h1>Article Name: </h1><textarea rows="5" cols="70" ></textarea>
+        <h1>Article Name: </h1><textarea rows="3" cols="70" ></textarea>
         <h1>Category: </h1><textarea rows="2" cols="70" ></textarea>
         <h1>Description: </h1><textarea rows="10" cols="70" ></textarea>
-        <h1>Content: </h3><textarea rows="50" cols="70" ></textarea>
+        <h1>Content: </h3><textarea rows="10" cols="70" ></textarea>
     </div>
     <div>
-        Upload File: <input type="file"  multiple="multiple" name="upfile">
+        Upload File: <input type="file"  multiple name="upfile" />
+        Upload File: <input type="file"  multiple name="upfile" />
+        Upload File: <input type="file"  multiple name="upfile" />
     </div>
     <div>
         <button>POST</button> <button>CANCEL</button>
